# JYstore-Tultle

./: .env  .env.dev  .env.prod  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ruff.yml
src/plugins/cvcvcv/: __init__.py
src/plugins/echo/: __init__.py
src/plugins/epicfree/: __init__.py  data_source.py  example.xlsx
src/plugins/help/: __init__.py
src/plugins/kook_on_voice/: __init__.py  config.py
src/plugins/mcsm_api/: __init__.py  config.py
src/plugins/mutong_panel_api/: __init__.py  config.py
src/plugins/recode_message/: __init__.py
src/plugins/recode_picture/: __init__.py  config.py
src/plugins/sync_message_to_discord/: __init__.py  config.py  init_db.py  qq_emoji_dict.py  utils.py
src/plugins/test/: __init__.py
