[project]
name = "JYstore-Tultle"
version = "1.0.1"
description = "Just a tultle"
readme = "README.md"
requires-python = ">=3.12, <4.0"


[tool.nonebot]
adapters = [
    {name = "开黑啦", module_name = "nonebot.adapters.kaiheila"},
    {name = "Discod", module_name = "nonebot.adapters.discord"},
    {name = "OneBot V11", module_name = "nonebot.adapters.onebot.v11"}
]
plugins = ["nonebot_plugin_status", "nonebot_plugin_apscheduler", "nonebot_plugin_localstore", "nonebot_plugin_epicfree", "nonebot_plugin_zssm", "~onebot_plugin_mccheck"]
plugin_dirs = ["src/plugins"]
builtin_plugins = ["echo"]


[tool.poetry]
name = "jystore-tultle"
version = "1.0.1"
description = "Just a tultle"
authors = ["Autuamn <autuamn@qq.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
nonebot2 = {extras = ["aiohttp"], version = "^2.2.1"}
nonebot-adapter-kaiheila = "^0.3.3"
nonebot-adapter-qq = "^1.4.2"
nonebot-plugin-status = "^0.9.0"
filetype = "^1.2.0"
pytz = "*"
nonebot-adapter-discord = "^0.1.7"
nonebot-plugin-apscheduler = "^0.5.0"
nonebot-plugin-localstore = "^0.7.4"
pillow = "^11.1.0"
nonebot-adapter-onebot = "^2.4.6"
nonebot-plugin-epicfree = "^0.2.6"
nonebot-plugin-zssm = "^0.3.1"
nonebot-plugin-alconna = "^0.58.1"
nonebot-plugin-mccheck = "^0.2.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.11.12"
pre-commit = "^4.2.0"


[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "C", "T", "PYI", "PT"]
ignore = ["E402", "F403", "F405", "C901", "PYI021", "PYI048", "W191", "E501"]
ignore-init-module-imports = true

[tool.ruff.lint.isort]
force-sort-within-sections = true
extra-standard-library = ["typing_extensions"]
combine-as-imports = true
order-by-type = true
relative-imports-order = "closest-to-furthest"
section-order = [
    "future",
    "standard-library",
    "first-party",
    "third-party",
    "local-folder",
]


[tool.black]
line-length = 88
target-version = ["py39", "py310", "py311"]
include = '\.pyi?$'
extend-exclude = ''''''


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
