[project]
name = "JYstore-Tultle"
version = "1.0.1"
description = "Just a tultle"
readme = "README.md"
requires-python = ">=3.12, <4.0"


[tool.nonebot]
adapters = [
    {name = "开黑啦", module_name = "nonebot.adapters.kaiheila"},
    {name = "Discod", module_name = "nonebot.adapters.discord"},
    {name = "OneBot V11", module_name = "nonebot.adapters.onebot.v11"}
]
plugins = ["nonebot_plugin_status", "nonebot_plugin_apscheduler", "nonebot_plugin_localstore", "nonebot_plugin_epicfree", "nonebot_plugin_zssm", "nonebot_plugin_mccheck"]
plugin_dirs = ["src/plugins"]
builtin_plugins = ["echo"]


[tool.poetry]
name = "jystore-tultle"
version = "1.0.1"
description = "Just a tultle"
authors = ["Autuamn <autuamn@qq.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
nonebot2 = { extras = ["aiohttp"], version = "*" }
nonebot-adapter-kaiheila = "*"
nonebot-adapter-qq = "*"
nonebot-plugin-status = "*"
nonebot-adapter-discord = "*"
nonebot-plugin-apscheduler = "*"
nonebot-plugin-localstore = "*"
nonebot-adapter-onebot = "*"
nonebot-plugin-epicfree = "*"
nonebot-plugin-zssm = "*"
nonebot-plugin-alconna = "*"
nonebot-plugin-mccheck = { git = "https://github.com/Atlanttis/nonebot_plugin_mcCheck.git" }

[tool.poetry.group.dev.dependencies]
ruff = "*"
pre-commit = "*"


[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "C", "T", "PYI", "PT"]
ignore = ["E402", "F403", "F405", "C901", "PYI021", "PYI048", "W191", "E501"]
ignore-init-module-imports = true

[tool.ruff.lint.isort]
force-sort-within-sections = true
extra-standard-library = ["typing_extensions"]
combine-as-imports = true
order-by-type = true
relative-imports-order = "closest-to-furthest"
section-order = [
    "future",
    "standard-library",
    "first-party",
    "third-party",
    "local-folder",
]


[tool.black]
line-length = 88
target-version = ["py312", "py313"]
include = '\.pyi?$'
extend-exclude = ''''''


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
