[project]
name = "JYstore-Tultle"
version = "1.0.1"
description = "Just a tultle"
authors = [{ name = "Autuamn", email = "autuamn@qq.com" }]
requires-python = ">=3.12, <4.0"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "nonebot2[aiohttp]",
    "nonebot-adapter-kaiheila",
    "nonebot-adapter-qq",
    "nonebot-plugin-status",
    "nonebot-adapter-discord",
    "nonebot-plugin-apscheduler",
    "nonebot-plugin-localstore",
    "nonebot-adapter-onebot",
    "nonebot-plugin-epicfree",
    "nonebot-plugin-zssm",
    "nonebot-plugin-alconna",
    "nonebot-plugin-mccheck",
]


[dependency-groups]
dev = [
    "ruff",
    "pre-commit",
]


[tool.nonebot]
plugin_dirs = ["src/plugins"]
builtin_plugins = ["echo"]

[tool.nonebot.plugins]
"@local" = []
nonebot-plugin-status = ["nonebot_plugin_status"]
nonebot-plugin-apscheduler = ["nonebot_plugin_apscheduler"]
nonebot-plugin-localstore = ["nonebot_plugin_localstore"]
nonebot-plugin-epicfree = ["nonebot_plugin_epicfree"]
nonebot-plugin-zssm = ["nonebot_plugin_zssm"]
nonebot-plugin-mccheck = ["nonebot_plugin_mccheck"]

[tool.nonebot.adapters]
"@local" = []
nonebot-adapter-kaiheila = [{name = "开黑啦", module_name = "nonebot.adapters.kaiheila"}]
nonebot-adapter-discord = [{name = "Discord", module_name = "nonebot.adapters.discord"}]
nonebot-adapter-onebot = [{name = "OneBot V11", module_name = "nonebot.adapters.onebot.v11"}]


[tool.uv]
[tool.uv.sources]
nonebot-plugin-mccheck = { git = "https://github.com/Atlanttis/nonebot_plugin_mcCheck.git" }


[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "C", "T", "PYI", "PT"]
ignore = ["E402", "F403", "F405", "C901", "PYI021", "PYI048", "W191", "E501"]
ignore-init-module-imports = true

[tool.ruff.lint.isort]
force-sort-within-sections = true
extra-standard-library = ["typing_extensions"]
combine-as-imports = true
order-by-type = true
relative-imports-order = "closest-to-furthest"
section-order = [
    "future",
    "standard-library",
    "first-party",
    "third-party",
    "local-folder",
]


[tool.black]
line-length = 88
target-version = ["py312", "py313"]
include = '\.pyi?$'
extend-exclude = ''''''
